[package]
name = "rust_for_java_examples"
version = "0.1.0"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
failure = "0.1.5"
derive_more = "0.13.0"
rand = "0.6.4"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"