[package]
name = "rust_for_java_examples"
version = "0.1.0"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
derive_more = "0.99"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.6.8"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
